[package]
name = "netsnmp-sys-nocrypto"
description = "Rust FFI bindings to Net-SNMP with no crypto dep"
version = "0.1.2"
authors = ["Hroi Sigurdsson <hroi@asdf.dk>", "Sergiy S. <div@altertech.com>"]
keywords = ["networking", "snmp"]
repository = "https://github.com/divi255/netsnmp-sys-nocrypto"
links = "netsnmp"
build = "build.rs"
license = "BSD-2-Clause"

[dependencies]
libc = "0.2.*"
